@@ -1,0 +1,2 @@
+prog: pth-undocumented
+vgopts: -q
