@@ -115,6 +115,8 @@ where XXXXXX is the bug number as listed below.
 344499  Fix compilation for Linux kernel >= 4. With this, also require
         a Linux kernel >= 2.6 as 2.4 is mostly untested and might trigger
         obvious and non-obvious issues
+344512  Fix unhandled syscall: unix:348 (__pthread_chdir) and unhandled 
+        syscall: unix:349 (__pthread_fchdir) on OS X
 344560  Fix stack traces missing penultimate frame on OS X
 344621  Fix memcheck/tests/err_disable4 test on OS X
 344686  Fix suppression for pthread_rwlock_init on OS X 10.10
